Workings Java 11 Scripting Engine